[package]
name = "mock-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
binary_sv2 = { git = "https://github.com/demand-open-source/stratum", branch ="main",subdirectory = "protocols/v2/binary_sv2"}
noise_sv2 = { git = "https://github.com/demand-open-source/stratum", branch="main",subdirectory = "protocols/v2/noise-sv2"}
codec_sv2 = { git = "https://github.com/demand-open-source/stratum", branch="main",subdirectory = "protocols/v2/codec-sv2", features = ["noise_sv2","with_buffer_pool"]}
roles_logic_sv2 = { git = "https://github.com/demand-open-source/stratum", branch = "main", subdirectory = "protocols/v2/roles-logic-sv2" }
demand-share-accounting-ext = { git = "https://github.com/theivess/share-accounting-ext", branch = "negotiation-messages"}
demand-sv2-connection = {git = "https://github.com/theivess/demand-sv2-connection"}
key-utils = {version = "1.2.0", features = ["std"]}
secp256k1 = { version = "0.28.2", features = ["rand"] }
